feat(api): /stats route (#14)
* add api cache; decrease scanner update time; add /stats route

* improve log for getEndpointsHandler
