# internal/models/endpoints.go
@@ -9,7 +9,6 @@ type (
 			ResponseTime int64  `json:"response_time"  pg:"response_time"`
 		} `json:"supported_methods" pg:"supported_methods"`
 		//UnscannedMethods []string `json:"unscanned_methods" pg:"unscanned_methods"`
-		IsAlive     bool    `json:"is_alive" pg:"is_alive"`
 		IsRpc       bool    `json:"is_rpc" pg:"is_rpc"`
 		IsValidator bool    `json:"is_validator" pg:"is_validator"`
 		AsnInfo     AsnInfo `json:"asn_info" pg:"asn_info"`
@@ -21,7 +20,6 @@ type (
 		Network     string `csv:"network"`
 		Country     string `csv:"country"`
 		Isp         string `csv:"isp"`
-		IsAlive     bool   `csv:"is_alive"`
 		IsRpc       bool   `csv:"is_rpc"`
 		IsValidator bool   `csv:"is_validator"`
 	}
@@ -35,5 +33,11 @@ type (
 		Alpha2 string `json:"alpha2" pg:"alpha2"`
 		Alpha3 string `json:"alpha3" pg:"alpha3"`
 		Name   string `json:"name" pg:"name"`
+	}
+	Stat struct {
+		Total     int `json:"total" pg:"total"`
+		Alive     int `json:"alive" pg:"alive"`
+		Rpc       int `json:"rpc" pg:"rpc"`
+		Validator int `json:"validator" pg:"validator"`
 	}
 )
